--- a/index.html
+++ b/index.html
@@ -361,11 +361,11 @@
                             }
                         }
                         if (config['tip_for_player_sound'] && globalThis.white_player_list.indexOf(item['name']) === -1) {
-                            if (current_map['@rareresourcedistribution'] !== "DEFAULT" && (item['uni_id'].indexOf("red") + 1)
+                            if (current_map['@rareresourcedistribution'] !== "DEFAULT" && ((item['uni_id'].indexOf("red") + 1)
                                 || (current_map['@rareresourcedistribution'].indexOf("RED") + 1)
                                 || (current_map['@rareresourcedistribution'].indexOf("OUT") + 1)
                                 || (current_map['@type'].indexOf("BLACK") + 1)
-                                || (current_map['@type'].indexOf("RED") + 1)) {
+                                || (current_map['@type'].indexOf("RED") + 1))) {
                                 let temp_audio = new Audio("./resource/tip.mp3");
                                 new Promise((resolve, reject) => {
                                     temp_audio.play()
