--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         let distance = Math.sqrt(x * x + y * y).toFixed(2)
                         if (distance > 80) {
                             if (globalThis['local_player_position']['current_postion'][0] !== 0) {
-                                if (globalThis.white_player_list.indexOf(item['name']) === -1) {
+                                if (globalThis.white_player_list.indexOf(item['name']) === -1 && item['name'] !== "PA") {
                                     globalThis.white_player_list.push(item['name'])
                                 }
                             }
@@ -355,7 +355,7 @@
                         temp_img.scale.y = 1 / app.stage.scale.y
                     } else {
                         if (!item['position']) continue
-                        if (globalThis['club'] === item['club']) {
+                        if (globalThis['club'] === item['club'] && item['name'] !== "PA") {
                             if (globalThis.white_player_list.indexOf(item['name']) === -1) {
                                 globalThis.white_player_list.push(item['name'])
                             }
