--- a/login.html
+++ b/login.html
@@ -148,6 +148,7 @@
         width: 100%;
         height: 100%;
         background-color: #f2f2f2;
+        /*background-color: transparent;*/
     }
 
     #container {
