--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         if (distance > 80) {
                             if (globalThis['local_player_position']['current_postion'][0] !== 0) {
                                 if (globalThis.white_player_list.indexOf(item['name']) === -1 && item['name'] !== "PA") {
-                                    globalThis.white_player_list.push(item['name'])
+                                    // globalThis.white_player_list.push(item['name'])
                                 }
                             }
                         }
