--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label" style="width: auto">红黑区遇敌提示音</label>
+            <label class="layui-form-label" style="width: auto">红黑区遇敌提示音（F7快捷键）</label>
             <div class="layui-input-block">
                 <input type="checkbox" name="tip_for_player_sound" lay-skin="switch" lay-text="ON|OFF">
             </div>
